deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
  namespace: jenkins-demo
spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx-demo

  template:
    metadata:
      labels:
        app: nginx-demo

    spec:
      containers:
        - name: nginx
          image: nginx:latest

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html

            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf

      volumes:
        - name: html
          configMap:
            name: nginx-html

        - name: nginx-config
          configMap:
            name: nginx-config

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: jenkins-demo
spec:
  selector:
    app: nginx-demo

  ports:
    - port: 80
      targetPort: 8080

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-demo
  namespace: jenkins-demo
spec:
  to:
    kind: Service
    name: nginx-demo

  port:
    targetPort: 80
